[gd_scene load_steps=36 format=2]

[ext_resource path="res://Sprites/Prom/promIdle.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Prom/promJump.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Prom/promRun.png" type="Texture" id=4]
[ext_resource path="res://pass_through.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Prom/promspear32x32.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Prom/promSword48x32.png" type="Texture" id=7]
[ext_resource path="res://PlayerStats.gd" type="Script" id=8]
[ext_resource path="res://Fonts/orange kid.ttf" type="DynamicFontData" id=9]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 16, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 16, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 7 )
region = Rect2( 0, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 48, 32, 48, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ) ],
"loop": false,
"name": "jump",
"speed": 12.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "spear",
"speed": 15.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "sword",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 15 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 16, 14 )

[sub_resource type="DynamicFont" id=30]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=31]
size = 12
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=32]
size = 12
font_data = ExtResource( 9 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 27, -8 )

[node name="pass_through" parent="." instance=ExtResource( 5 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = -100000
limit_right = 320
limit_bottom = 180
smoothing_enabled = true
smoothing_speed = 2.0

[node name="Melee" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Melee"]
shape = SubResource( 29 )

[node name="MeleeTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerStats" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PlayerStats"]
margin_left = 5.0
margin_right = 315.0
margin_bottom = 175.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PlayerStats/HBoxContainer"]
margin_right = 46.0
margin_bottom = 175.0
custom_constants/separation = 0

[node name="Score" type="Label" parent="CanvasLayer/PlayerStats/HBoxContainer/VBoxContainer"]
margin_right = 46.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 30 )
text = "Score: 7"

[node name="Height" type="Label" parent="CanvasLayer/PlayerStats/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 46.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 31 )
text = "Height: 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kills" type="Label" parent="CanvasLayer/PlayerStats/HBoxContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 46.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 32 )
text = "Kills: 4"

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="MeleeTimer" to="." method="_on_MeleeTimer_timeout"]
